@@ -10,8 +10,9 @@
 
 strapply <- 
 function (X, pattern, FUN = function(x, ...) x, ..., simplify = FALSE, 
-    USE.NAMES = FALSE) 
-	sapply(X, function(x) {
+    USE.NAMES = FALSE) {
+	if (inherits(FUN, "formula")) FUN <- as.function(FUN)
+	result <- sapply(X, function(x) {
 	    first <- TRUE
 	    v <- NULL
 	    gsubfn(pattern, function(x, ...)
@@ -19,5 +20,7 @@ function (X, pattern, FUN = function(x, ...) x, ..., simplify = FALSE,
 		else c(v, FUN(x, ...)),
 		x, ...)
 	    v
-	}, simplify = simplify, USE.NAMES = USE.NAMES)
+	}, simplify = is.logical(simplify) && simplify, USE.NAMES = USE.NAMES)
+	if (is.logical(simplify)) result else do.call(simplify, result)
+}
 
